STYLE: adjust ordering of 'find' command arguments
- use -name test before -type test to avoid calling stat(2) on every file.
- use -delete instead of -exec rm to avoid forking

--- a/wmake/scripts/makeFiles
+++ b/wmake/scripts/makeFiles
@@ -56,7 +56,7 @@ do
 done >> Make/files
 [ -s Make/files ] && echo >> Make/files
 
-for file in $(find . -type f -name "*.[cCylLfF]" -print)
+for file in $(find . -name "*.[cCylLfF]" -type f -print)
 do
     pathName=$(echo ${file%/*} | $dirToString -strip)
 
