TUT: change `residuals` FO remnants to `solverInfo` FO (#1290)

--- a/etc/caseDicts/postProcessing/numerical/solverInfo.cfg
+++ b/etc/caseDicts/postProcessing/numerical/solverInfo.cfg
@@ -7,7 +7,7 @@
 \*---------------------------------------------------------------------------*/
 
 type            solverInfo; //residuals;
-libs            ("libutilityFunctionObjects.so");
+libs            (utilityFunctionObjects);
 
 writeControl    timeStep;
 writeInterval   1;
