BUG: caseDicts: fix pressureDifferencePatch and pressureDifferenceSurface scripts (fixes #2482)

--- a/etc/caseDicts/postProcessing/pressure/pressureDifference.cfg
+++ b/etc/caseDicts/postProcessing/pressure/pressureDifference.cfg
@@ -22,12 +22,14 @@ functions
         #includeEtc "caseDicts/postProcessing/surfaceFieldValue/surfaceRegion.cfg"
         operation       areaAverage;
         fields          (p);
+        $region1;
     }
     region2
     {
         #includeEtc "caseDicts/postProcessing/surfaceFieldValue/surfaceRegion.cfg"
         operation       areaAverage;
         fields          (p);
+        $region2;
     }
 }
 
