--- a/etc/caseDicts/postProcessing/pressure/pressureDifferenceSurface.cfg
+++ b/etc/caseDicts/postProcessing/pressure/pressureDifferenceSurface.cfg
@@ -6,16 +6,14 @@
      \\/     M anipulation  |
 \*---------------------------------------------------------------------------*/
 
-#includeEtc "caseDicts/postProcessing/pressure/pressureDifference.cfg"
-
 region1
 {
-    regionType sampledSurface;
-
+    regionType  sampledSurface;
+    name        $triSurface1;
     sampledSurfaceDict
     {
         type        meshedSurface;
-        regionType  cells;
+        source      cells;
         interpolate true;
         surface     $triSurface1;
     }
@@ -24,10 +22,13 @@ region1
 region2
 {
     $region1;
+    name        $triSurface2;
     sampledSurfaceDict
     {
         surface     $triSurface2;
     }
 }
+
+#includeEtc "caseDicts/postProcessing/pressure/pressureDifference.cfg"
 
 // ************************************************************************* //
