--- a/etc/caseDicts/postProcessing/visualization/streamlines.cfg
+++ b/etc/caseDicts/postProcessing/visualization/streamlines.cfg
@@ -13,7 +13,7 @@ executeControl  writeTime;
 writeControl    writeTime;
 
 setFormat       vtk;
-trackForward    true;
+direction       forward;   // (forward | backward | bidirectional)
 
 lifeTime        10000;
 nSubCycle       5;
